--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
     "react-chartjs-2": "^2.11.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.0",
-    "web-vitals": "^0.2.4"
+    "web-vitals": "^0.2.4",
+    "leaflet": "^1.6.0",
+    "leaflet-ant-path": "^1.3.0",
+    "react-leaflet": "^2.7.0",
+    "react-leaflet-ant-path": "^1.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
